Fix for Issue426, libre badge overlaps some text.

--- a/www/includes/deed3.css
+++ b/www/includes/deed3.css
@@ -324,8 +324,8 @@
 
 		#libre {
 			position: absolute;
-			right: 68px;
-			top: 30px;
+			right: 25px;
+			top: 36px;
 			width: 150px;
 			height: 250px;
 		}
